# Citas_medicas

./: README.md  app.py  cita.py  pyproject.toml
templates/: dashboard.html  index.html  layout.html  login.html  pacientes.html  panel.html  register.html  registrar.html
